# cookiecutter-fastapi-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  cookiecutter.json  create_cookie.sh
docs/: pyproject.toml  requirements.txt  update-requirements.sh
docs/source/: about.rst  conf.py  index.rst  tutorial.rst  usage.rst
{{ cookiecutter.project_slug }}/: Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  update-requirements.sh
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/common/: config.py  database.py  interfaces.py  ratelimits.py  uri.py
{{ cookiecutter.project_slug }}/app/database/: config.py  conn.py  models.py
{{ cookiecutter.project_slug }}/app/logic/: llm.py  users.py
{{ cookiecutter.project_slug }}/app/routers/: chat.py  users.py
{{ cookiecutter.project_slug }}/app/tests/: conftest.py  test_main.py
{{ cookiecutter.project_slug }}/app/tests/logic/: test_llm.py  test_users.py
{{ cookiecutter.project_slug }}/app/tests/routers/: test_users.py
