[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
junit_xml = "mypy-junit.xml"
check_untyped_defs = true

[tool.ruff]
lint.extend-select = ["I"]